# plugin-1

./: CMakeLists.txt  pluginDev.sln  pluginDev.vcxproj  pluginDev.vcxproj.filters  readme.txt
Debug/: pluginDev.ilk
Debug/pluginDev.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pluginDev.lastbuildstate
config/: libconf.ini
include/: logging.h  plugin_base.h  plugin_conf.h  plugin_conf.hpp  plugin_entity.h  plugin_manager.h
lib/: CMakeLists.txt  sample_plugin.cc
src/: CMakeLists.txt  plugin.cpp  plugin_conf.cpp  plugin_manager.cpp
test/: CMakeLists.txt  test.cpp
